# Math

./: CMakeLists.txt  main.cpp  makefile  tests.cpp
buildmath.dSYM/Contents/: Info.plist
buildmath.dSYM/Contents/Resources/DWARF/: buildmath
complex/: Complex.cpp  Quaternion.cpp  Vector.cpp
complex/include/: Complex.hpp  Quaternion.hpp  Vector.hpp
include/: Core.hpp  Solver.hpp
quaternion/: Quaternion.cpp
quaternion/include/: Quaternion.hpp
solver/: Solver.cpp
solver/include/: Solver.hpp
src/: Core.cpp  Solver.cpp  main.cpp
src/include/: Core.hpp
vector/: Vector.cpp
vector/include/: Vector.hpp
